--- a/res/values-de/purenexus_strings.xml
+++ b/res/values-de/purenexus_strings.xml
@@ -19,9 +19,9 @@
   <string name="download_speed_text"><xliff:g id="text">%1$s</xliff:g>, <xliff:g id="size" example="230 kB">%2$s</xliff:g>/s</string>
   <!-- Status indicating that the download has been paused to start in the future.  Appears for an
         individual item in the download list.  [CHAR LIMIT=24] -->
-  <string name="download_paused">Paused</string>
+  <string name="download_paused">Pausiert</string>
   <!-- Representation of download progress percentage when paused. [CHAR LIMIT=24] -->
-  <string name="download_paused_percent">Paused, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
+  <string name="download_paused_percent">Pausiert, <xliff:g id="number"></xliff:g><xliff:g id="percent"></xliff:g></string>
   <!-- Representation of download progress percentage when queued. [CHAR LIMIT=24] -->
-  <string name="download_queued_percent">Queued, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
+  <string name="download_queued_percent">In der Warteschlange, <xliff:g id="number">%d </xliff:g> <xliff:g id="percent">%% </xliff:g></string>
 </resources>
