--- a/res/values-uk/purenexus_plurals.xml
+++ b/res/values-uk/purenexus_plurals.xml
@@ -18,20 +18,20 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <!-- Phrase describing a time duration using seconds [CHAR LIMIT=16] -->
   <plurals name="duration_seconds">
-    <item quantity="one"><xliff:g id="count">%d</xliff:g> sec</item>
-    <item quantity="few"><xliff:g id="count">%d</xliff:g> secs</item>
-    <item quantity="other"><xliff:g id="count">%d</xliff:g> secs</item>
+    <item quantity="one"><xliff:g id="count">%d</xliff:g> сек</item>
+    <item quantity="few"><xliff:g id="count">%d</xliff:g> сек</item>
+    <item quantity="other"><xliff:g id="count">%d</xliff:g> сек</item>
   </plurals>
   <!-- Phrase describing a time duration using minutes [CHAR LIMIT=16] -->
   <plurals name="duration_minutes">
-    <item quantity="one"><xliff:g id="count">%d</xliff:g> min</item>
-    <item quantity="few"><xliff:g id="count">%d</xliff:g> mins</item>
-    <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
+    <item quantity="one"><xliff:g id="count">%d</xliff:g> хв</item>
+    <item quantity="few"><xliff:g id="count">%d</xliff:g> хв</item>
+    <item quantity="other"><xliff:g id="count">%d</xliff:g> хв</item>
   </plurals>
   <!-- Phrase describing a time duration using hours [CHAR LIMIT=16] -->
   <plurals name="duration_hours">
-    <item quantity="one"><xliff:g id="count">%d</xliff:g> hr</item>
-    <item quantity="few"><xliff:g id="count">%d</xliff:g> hrs</item>
-    <item quantity="other"><xliff:g id="count">%d</xliff:g> hrs</item>
+    <item quantity="one"><xliff:g id="count">%d</xliff:g> год</item>
+    <item quantity="few"><xliff:g id="count">%d</xliff:g> год</item>
+    <item quantity="other"><xliff:g id="count">%d</xliff:g> год</item>
   </plurals>
 </resources>
