--- a/res/values-zh-rTW/purenexus_strings.xml
+++ b/res/values-zh-rTW/purenexus_strings.xml
@@ -21,7 +21,7 @@
         individual item in the download list.  [CHAR LIMIT=24] -->
   <string name="download_paused">已暫停</string>
   <!-- Representation of download progress percentage when paused. [CHAR LIMIT=24] -->
-  <string name="download_paused_percent">已暫停，<xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
+  <string name="download_paused_percent">已暫停, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
   <!-- Representation of download progress percentage when queued. [CHAR LIMIT=24] -->
-  <string name="download_queued_percent">等待中，<xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
+  <string name="download_queued_percent">等待中, <xliff:g id="number">%d</xliff:g><xliff:g id="percent">%%</xliff:g></string>
 </resources>
